--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "wroom",
-  "short_name": "wroom",
+  "name": "seller",
+  "short_name": "seller",
   "theme_color": "#0e0e0e",
   "background_color": "#0e0e0e",
   "display": "standalone",
