--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-google-login": "latest",
+    "react-icons": "latest",
     "react-intersection-observer": "latest",
     "react-modal": "latest",
     "react-paginate": "latest",
@@ -100,12 +101,12 @@
     "enzyme-adapter-react-16": "latest",
     "eslint": "latest",
     "eslint-config-prettier": "latest",
-    "eslint-plugin-prettier": "latest",
     "eslint-plugin-filenames": "latest",
+    "eslint-plugin-prettier": "latest",
     "eslint-plugin-react": "latest",
-    "prettier": "latest",
     "jest": "latest",
     "jest-cli": "latest",
+    "prettier": "latest",
     "ts-jest": "latest",
     "ts-node": "latest",
     "typescript": "latest"
